Revert "Revert "Upgrade gradle to 7.5 (#3655)""
This reverts commit 5d3677cb28adb32029c32555f5c653c07f4fabab.